src/test/ui/type/type-ascription-instead-of-initializer.stderr
error: expected type, found `10`
  --> $DIR/type-ascription-instead-of-initializer.rs:2:31
   |
LL |     let x: Vec::with_capacity(10, 20);
   |         --                    ^^ expected type
   |         ||
   |         |help: use `=` if you meant to assign
   |         while parsing the type for `x`

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/type-ascription-instead-of-initializer.rs:2:12
   |
LL |     let x: Vec::with_capacity(10, 20);
   |            ^^^^^^^^^^^^^^^^^^ --  -- supplied 2 arguments
   |            |
   |            expected 1 argument
   |
note: associated function defined here
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL |     pub fn with_capacity(capacity: usize) -> Self {
   |            ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0061`.
